Remove obscure cursor magic

These calculations looks like an attempt to do some optimizations but
they have no further consequences. It's always the whole passed text
new highlighted.

And in this bug-case is "index = lengthPosition" and nothing will
highlighted.

BUG: 339651

- Code is not yet reformatted (to my surprise no complain at commit)
- Start textedit example from sonnet/examples
- It's enough to add/remove a char in upper text box after "Whih." and call the context menu